# BREACH

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  Titan Hunter1.md  Titan Hunter2.md  USER.md
backend/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.example
backend/config/: default.toml
backend/migrations/: 20260120000000_initial.sql  20260120000001_features.sql  20260120000002_social.sql  20260120000003_pvp.sql  20260120000004_marketplace.sql  20260120000005_chat.sql
backend/src/: lib.rs  main.rs
backend/src/api/: achievement.rs  auth.rs  battle.rs  capture.rs  chat.rs  friend.rs  game.rs  guild.rs  health.rs  inventory.rs  leaderboard.rs  map.rs  marketplace.rs  mod.rs  notification.rs  player.rs  pvp.rs  quest.rs  solana.rs  titan.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/error/: mod.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: achievement.rs  battle.rs  chat.rs  inventory.rs  leaderboard.rs  location.rs  marketplace.rs  mod.rs  player.rs  poi.rs  pvp.rs  quest.rs  social.rs  titan.rs
backend/src/scheduler/: mod.rs
backend/src/services/: achievement.rs  auth.rs  battle.rs  capture.rs  chat.rs  friend.rs  guild.rs  inventory.rs  leaderboard.rs  location.rs  map.rs  marketplace.rs  mod.rs  notification.rs  player.rs  pvp.rs  quest.rs  solana.rs  spawn.rs
backend/src/utils/: geo.rs  mod.rs
backend/src/websocket/: mod.rs
backend/tests/: api_tests.rs
backend/tests/common/: mod.rs
contracts/: Cargo.toml  README.md
contracts/programs/game_logic/: Cargo.toml
contracts/programs/game_logic/src/: error.rs  lib.rs
contracts/programs/game_logic/src/instructions/: add_experience.rs  distribute_reward.rs  force_update_authority.rs  initialize.rs  mod.rs  record_battle.rs  record_capture.rs  set_paused.rs  update_config.rs
contracts/programs/game_logic/src/state/: battle.rs  capture.rs  config.rs  mod.rs
contracts/programs/titan_nft/: Cargo.toml
contracts/programs/titan_nft/src/: error.rs  lib.rs
contracts/programs/titan_nft/src/instructions/: add_experience.rs  evolve.rs  fuse.rs  initialize.rs  level_up.rs  mint_titan.rs  mod.rs  set_paused.rs  transfer.rs  update_config.rs
contracts/programs/titan_nft/src/state/: config.rs  mod.rs  player.rs  titan.rs
contracts/programs/titan_nft/src/utils/: genes.rs  mod.rs
contracts/scripts/: add-token-metadata.ts  create-breach-token.sh
contracts/tests/: add-token-metadata.ts  package.json  pnpm-lock.yaml  test-capture-mint.ts  test-game-logic.ts  test-game-records.ts  test-marketplace.ts  test-reward-distribution.ts  test-reward-simple.ts  test-signed-capture.ts  test-titan-operations.ts  test-titan.ts  tsconfig.json
docs/: BREACH_DESIGN_DOCUMENT.md  GAME_ECONOMY_WHITEPAPER.md  GEOGRAPHIC_SYSTEM_DESIGN.md  SMART_CONTRACT_SPECIFICATION.md  TECHNICAL_SPECIFICATION.md
website/: package.json  pnpm-lock.yaml
website/public/: manifest.json
website/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
website/src/app/docs/: page.tsx
website/src/app/faq/: page.tsx
website/src/app/privacy/: page.tsx
website/src/app/terms/: page.tsx
website/src/app/whitepaper/: page.tsx
website/src/components/: AboutSection.tsx  BackgroundEffects.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  Navbar.tsx  PageHeader.tsx  RoadmapSection.tsx  TitansSection.tsx  TokenomicsSection.tsx  WaitlistSection.tsx
