[package]
name = "breach-backend"
version = "0.1.0"
edition = "2021"
authors = ["BREACH Team"]
description = "BREACH - Titan Hunter Backend API Server"
license = "MIT"

[[bin]]
name = "breach-backend"
path = "src/main.rs"

[lib]
name = "breach_backend"
path = "src/lib.rs"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "limit"] }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
futures-util = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

# Crypto & Auth
ed25519-dalek = "2.1"
bs58 = "0.5"
jsonwebtoken = "9.2"
sha2 = "0.10"
rand = "0.8"

# Note: Solana SDK removed - backend uses ed25519-dalek directly for signature verification
# Smart contract interactions will be handled via RPC calls, not SDK

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
config = "0.14"

# Geo
geo = "0.27"
geohash = "0.13"

# Rate Limiting
governor = "0.6"

# Validation
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }
mockall = "0.12"
fake = { version = "2.9", features = ["derive", "uuid", "chrono"] }
pretty_assertions = "1.4"
test-case = "3.3"
async-trait = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"