[package]
name = "titan_nft"
version = "0.1.0"
edition = "2021"
description = "BREACH Titan NFT Program"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.8"
pinocchio-token = "0.3"
pinocchio-system = "0.2"
pinocchio-pubkey = "0.2"

[dev-dependencies]
solana-program-test = "2.0"
solana-sdk = "2.0"
tokio = { version = "1", features = ["full"] }
